[package]
name = "fmodel-rust"
version = "0.8.1"
edition = "2021"
description = "Accelerate development of compositional, safe, and ergonomic applications/information systems by effectively implementing Event Sourcing and CQRS patterns in Rust."
license = "Apache-2.0"

[dependencies]
serde = {version = "1.0.200", features = ["derive"]}


[dev-dependencies]
derive_more = { version = "2", features = ["display"] }

tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
