[package]
name = "fmodel-rust"
version = "0.9.1"
edition = "2021"
description = "Accelerate development of compositional, safe, and ergonomic applications/information systems by effectively implementing Event Sourcing and CQRS patterns in Rust."
license = "Apache-2.0"

[dependencies]
serde = {version = "1.0.200", features = ["derive"]}
pretty_assertions = "1.4.1"

[dev-dependencies]
derive_more = { version = "2", features = ["display"] }

tokio = { version = "1.43.1", features = ["rt", "rt-multi-thread", "macros"] }

[features]
default = []           # default = Send futures
not-send-futures = []  # opt into non-Send futures